--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-blob-util": "^0.19.1",
+    "react-native-share": "^9.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
