--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,8 @@ prepare_react_native_project!
 
 pod 'react-native-blob-util',
     :path => '../node_modules/react-native-blob-util'
+pod 'RNFS', :path => '../node_modules/react-native-fs'
+pod 'RNFileViewer', :path => '../node_modules/react-native-file-viewer'
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
 # because `react-native-flipper` depends on (FlipperKit,...) that will be excluded
 #
