--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-blob-util": "^0.19.1",
+    "react-native-document-picker": "^9.0.1",
+    "react-native-file-viewer": "^2.1.5",
+    "react-native-fs": "^2.20.0",
+    "react-native-pdf": "^6.7.1",
     "react-native-share": "^9.4.1"
   },
   "devDependencies": {
